# gpf_builder

./: 01_requirements.md  02_system_analyst.md  03_system_design.md  04_implementation_plan.md  05_testing_plan.md  README.md  patches.txt  pyproject.toml  requirements.txt  tasks.md
gpf_builder/: hooks.py  modules.txt  patches.txt  pyproject.toml  requirements.txt  setup.py
gpf_builder/api/: api.py  guard.py
gpf_builder/doctype/gpf_audit_event/: gpf_audit_event.json  gpf_audit_event.py
gpf_builder/patches/: add_layout_block_locked_flag.py  add_layout_block_page_no.py  create_active_setup.py
gpf_builder/services/: access_control_service.py  audit_log_service.py  branding_service.py  field_mapping_service.py  finalization_service.py  layout_service.py  ocr_service.py  output_service.py  pdf_service.py  preview_service.py  rate_limit_service.py  setup_service.py  template_service.py  validation_service.py
gpf_builder/tests/: test_api_orchestration.py  test_integration_hardening.py  test_integration_security.py  test_integration_workflow.py  test_phase_1.py  test_plan_compliance.py  test_sec_access_control.py  test_unit_audit_log.py  test_unit_branding.py  test_unit_error_handling.py  test_unit_field_mapping.py  test_unit_finalization.py  test_unit_layout_service.py  test_unit_ocr_service.py  test_unit_output_service.py  test_unit_pdf_service.py  test_unit_preview_service.py  test_unit_rate_limit.py  test_unit_setup_service.py  test_unit_template_service.py  test_unit_validation_service.py  test_unit_version_service.py
gpf_builder/utils/: error_service.py
(+51 files in other folders)
